# philcomp25-materials

./: .gitignore  .icphilcomp25.typ.kate-swp  .pre-commit-config.yaml  README.md  build.py  build.sh  formato.typ  gafete.typ  graphics.typ  icphilcomp25.typ  niv.py  normalize.py  preview.py  program.typ  program_preview.typ  pyproject.toml  reel.typ  requirements.txt  sessions_calendar.typ
abstracts/: abstracts.csv  abstracts.txt  parse.py  parse_into_csv.py
assets/tiles/: README.md
database/: .sample.csv.kate-swp  DDL.sql  conference.db  daily.py  database.py  main.py
database/photos/: crop.py
