[project]
name = "icphilcomp25-materials"
version = "0.1.0"
description = "Templates and typesettings for ICPHILCOMP 25 materials"
readme = "README.md"
authors = [{ name = "Axel Rodríguez", email = "ahexo@ciencias.unam.mx" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
preview = "build:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["output*", "assets*"]
include = ["database*"]
